mobile: close on-screen keyboard when pressing return, instead of opening the first item, otherwise you can't see the list properly due to the keyboard covering it. Also a few other little fixes for mobile

--- a/src/components/FloatingSearchButton.module.scss
+++ b/src/components/FloatingSearchButton.module.scss
@@ -36,7 +36,7 @@
   stroke-linejoin: round;
 }
 
-@media (min-width: 576px) {
+@media ((min-width: 576px) and (orientation: portrait)) or ((min-height: 576px) and (orientation: landscape)) {
   .button {
     right: 10px;
     bottom: 10px;
